[tool.poetry]
name = "traefik-webhook-plugin"
version = "0.0.1"
description = ""
authors = ["Josh Jacobs <josh@dangerous.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
"web.py" = "^0.61"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
